CB-30077 Implemented upgrade for redhat9 clusters. CDP_ENABLE_REDHAT9_IMAGES entitlement is used.